<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="animals_near_you">Near you</string>
    <string name="animals_near_you_screen_label">Animals near you</string>
    <string name="animal_details_screen_label">Animal details</string>
    <string name="image_of_pet">Image of pet</string>
    <string name="special_needs">Special Needs</string>
    <string name="sprayed_or_neutered">Sprayed/Neutered</string>
    <string name="contact">Contact</string>
    <string name="playful">Playful</string>
    <string name="cute">Cute</string>
    <string name="young">Young</string>
    <string name="secret_doggo">Secret Doggo</string>
    <string name="welcome_in_our_organization">Welcome In Our Organization</string>

    <string name="shots_current">Shots current</string>
    <string name="good_boi_girl">Good boi/girl</string>
    <string name="hundred_emoji">💯</string>
    <string name="adopt">Adopt</string>
</resources>